interfaces fully done

--- a/src/app/Shared/leftsidebar/leftsidebar.component.html
+++ b/src/app/Shared/leftsidebar/leftsidebar.component.html
@@ -155,6 +155,32 @@
                   </span>
             <span class="hide-menu">  Développement du Business</span>
           </a>
+          <ul aria-expanded="false" class="collapse first-level">
+            <li class="sidebar-item">
+              <a [routerLink]="['/listestrategicplan']" class="sidebar-link">
+                <div class="round-16 d-flex align-items-center justify-content-center">
+                  <i class="ti ti-circle"></i>
+                </div>
+                <span class="hide-menu">Plan Strategique</span>
+              </a>
+            </li>
+            <li class="sidebar-item">
+              <a [routerLink]="['/listeopportunity']" class="sidebar-link">
+                <div class="round-16 d-flex align-items-center justify-content-center">
+                  <i class="ti ti-circle"></i>
+                </div>
+                <span class="hide-menu">Opportunite</span>
+              </a>
+            </li>
+            <li class="sidebar-item">
+              <a [routerLink]="['/listeproject']" class="sidebar-link">
+                <div class="round-16 d-flex align-items-center justify-content-center">
+                  <i class="ti ti-circle"></i>
+                </div>
+                <span class="hide-menu">Projet</span>
+              </a>
+            </li>
+          </ul>
         </li>
         <li class="sidebar-item">
           <a class="sidebar-link"  routerLink="/home"   routerLinkActive="active"  aria-expanded="false">
