--- a/src/app/Shared/leftsidebar/leftsidebar.component.html
+++ b/src/app/Shared/leftsidebar/leftsidebar.component.html
@@ -95,7 +95,7 @@
                   <span>
                     <i class="ti ti-calendar-event"></i>
                   </span>
-            <span class="hide-menu"> Gestion des Événements</span>
+            <span class="hide-menu" routerLink="/ourevent" > Gestion des Événements</span>
           </a>
         </li>
         <li class="sidebar-item">
@@ -103,7 +103,7 @@
                   <span>
                     <i class="ti ti-calendar-event"></i>
                   </span>
-            <span class="hide-menu"> Gestion  des Conférences</span>
+            <span class="hide-menu"routerLink="/conf"> Gestion  des Conférences</span>
           </a>
         </li>
         <li class="sidebar-item">
