--- a/src/app/IdentificationBesoin/Besoin/liste-des-besoin/liste-des-besoin.component.html
+++ b/src/app/IdentificationBesoin/Besoin/liste-des-besoin/liste-des-besoin.component.html
@@ -86,4 +86,38 @@
       </div>
     </div>
   </div>
+  <div class="slider">
+    <input type="radio" name="testimonial" id="t-1">
+    <input type="radio" name="testimonial" id="t-2">
+    <input type="radio" name="testimonial" id="t-3" checked>
+    <input type="radio" name="testimonial" id="t-4">
+    <input type="radio" name="testimonial" id="t-5">
+    <div class="testimonials">
+      <label class="item" for="t-1">
+        <h1>
+          <img  src="/assets/images/logo/logo.png" alt="" class="img-fluid mb-n4">
+        </h1>
+      </label>
+      <label class="item" for="t-2">
+        <h1>2</h1>
+      </label>
+      <label class="item" for="t-3">
+        <h1>3</h1>
+      </label>
+      <label class="item" for="t-4">
+        <h1>4</h1>
+      </label>
+      <label class="item" for="t-5">
+        <h1>5</h1>
+      </label>
+    </div>
+    <br/>
+    <div class="dots">
+      <label for="t-1"></label>
+      <label for="t-2"></label>
+      <label for="t-3"></label>
+      <label for="t-4"></label>
+      <label for="t-5"></label>
+    </div>
+  </div>
 </div>
