--- a/src/app/GestionService/detail-service/detail-service.component.html
+++ b/src/app/GestionService/detail-service/detail-service.component.html
@@ -60,20 +60,26 @@
 
             <div class="col-lg-6">
               <div class="shop-content">
-                  <div class="d-flex align-items-center gap-2 mb-2">
-                    <span class="badge text-bg-success fs-2 fw-semibold rounded-3">{{evenement.dateEvent}}</span>
-                  </div>
 
-                <h4 class="fw-semibold">Nom Evenement</h4>
-                <p class="mb-3"> {{evenement.nomEvent}}</p>
-                <h4 class="fw-semibold">Entreprise</h4>
-                <p class="mb-3">{{evenement.nomEntreprise}} </p>
-                <h4 class="fw-semibold">Type Evenement</h4>
-                <p class="mb-3">{{evenement.typeEvent}} </p>
-                <h4 class="fw-semibold"> places disponibles</h4>
-                <p class="mb-3"> {{evenement.nbrePlaceDispo}}</p>
+                <div *ngIf="service.etatService=='nonDisponible'" >
+                <span class="badge bg-danger text-success rounded-pill mb-3">{{service.etatService}}</span>
+                </div>
+                <div *ngIf="service.etatService=='disponible'" >
+                  <span class="badge bg-body-secondary text-success rounded-pill mb-3">{{service.etatService}}</span>
+                </div>
+
+                <h4 class="fw-semibold">Nom Service</h4>
+                <p class="mb-3"> {{service.nomService}}</p>
+                <h4 class="fw-semibold">description</h4>
+
+                  <div class="tab-pane fade show active" id="pills-description" role="tabpanel" aria-labelledby="pills-description-tab" tabindex="0">
+                    <h5 class="fs-5 fw-semibold mb-7">{{service.description}}</h5>
+
+
+                  </div>
                 <div class="d-sm-flex align-items-center gap-3 pt-8 mb-7">
-                  <a   type="submit" class="btn btn-primary" (click)="addParticipation(evenement.idEvent)"  >participer</a>
+
+                  <a href="javascript:void(0)" class="btn d-block btn-primary px-5 py-8 mb-2 mb-sm-0"routerLink="/listRevervation/{{service.idService}}"> List Reservation </a>
                 </div>
 
               </div>
@@ -84,20 +90,10 @@
       <div class="card shadow-none border " >
         <div class="card-body p-9">
           <ul class="nav nav-pills user-profile-tab border-bottom" id="pills-tab" role="tablist">
-            <li class="nav-item" role="presentation">
-              <button class="nav-link position-relative rounded-0 active d-flex align-items-center justify-content-center bg-transparent fs-3 py-6" id="pills-description-tab" data-bs-toggle="pill" data-bs-target="#pills-description" type="button" role="tab" aria-controls="pills-description" aria-selected="true">
-                <h4> Description</h4>
-              </button>
-            </li>
+
 
           </ul>
-          <div class="tab-content pt-4" id="pills-tabContent">
-            <div class="tab-pane fade show active" id="pills-description" role="tabpanel" aria-labelledby="pills-description-tab" tabindex="0">
-              <h5 class="fs-5 fw-semibold mb-7">{{evenement.description}}</h5>
 
-
-            </div>
-          </div>
         </div>
       </div>
 
