--- a/src/app/DeveloppementBuisness/Project/liste-project/liste-project.component.html
+++ b/src/app/DeveloppementBuisness/Project/liste-project/liste-project.component.html
@@ -49,7 +49,7 @@
           </tr>
           </thead>
           <tbody>
-          <tr *ngFor="let i of listeProjet">
+          <tr *ngFor="let i of listeProjet | paginate: { itemsPerPage: itemsPerPage, currentPage: currentPage }">
             <td>
               {{i.projectName}}
             </td>
@@ -87,6 +87,7 @@
           </tr>
           </tbody>
         </table>
+        <pagination-controls (pageChange)="currentPage = $event"></pagination-controls>
       </div>
     </div>
   </div>
