--- a/src/app/IdentificationBesoin/Besoin/liste-des-besoin/liste-des-besoin.component.css
+++ b/src/app/IdentificationBesoin/Besoin/liste-des-besoin/liste-des-besoin.component.css
@@ -14,26 +14,27 @@ body{
   align-items: center;
   justify-content: center;
   position: relative;
-  min-height: 350px;
+  min-height: 160px;
   perspective: 1000px;
   overflow: hidden;
 }
 .testimonials .item{
-  width: 250px;
+  width: 150px;
+  height: 150px;
   padding: 30px;
   border-radius: 5px;
-  background-color: #c2cfe0;
+  background-color: #4F73D9;
   position: absolute;
   border:3px solid white;
   top: 0;
   box-sizing: border-box;
   text-align: center;
   transition: transform 0.4s;
-  box-shadow: 0 0 10px rgba(215, 17, 17, 0.3);
+  box-shadow: 0px 3px 3px 1px rgba(55, 196, 227, 0.3);
   user-select: none;
   cursor: pointer;
 }
-.testimonials .item h1{font-size: 114px; color: white;}
+.testimonials .item h1{font-size: 12px; color: white;}
 .dots{display: flex; justify-content: center;align-items: center;}
 .dots label{
   height: 5px;
@@ -48,7 +49,12 @@ body{
 #t-2:checked ~ .dots label[for="t-2"],
 #t-3:checked ~ .dots label[for="t-3"],
 #t-4:checked ~ .dots label[for="t-4"],
-#t-5:checked ~ .dots label[for="t-5"]{
+#t-5:checked ~ .dots label[for="t-5"],
+#t-6:checked ~ .dots label[for="t-6"],
+#t-7:checked ~ .dots label[for="t-7"],
+#t-8:checked ~ .dots label[for="t-8"],
+#t-9:checked ~ .dots label[for="t-9"],
+#t-10:checked ~ .dots label[for="t-10"]{
   transform: scale(2);
   background-color: #fff;
   box-shadow: 0px 0px 0px 3px #dddddd24;
@@ -61,7 +67,17 @@ body{
 #t-3:checked ~ .dots label[for="t-4"],
 #t-4:checked ~ .dots label[for="t-3"],
 #t-4:checked ~ .dots label[for="t-5"],
-#t-5:checked ~ .dots label[for="t-4"]{
+#t-5:checked ~ .dots label[for="t-4"],
+#t-5:checked ~ .dots label[for="t-6"],
+#t-6:checked ~ .dots label[for="t-5"],
+#t-6:checked ~ .dots label[for="t-7"],
+#t-7:checked ~ .dots label[for="t-6"],
+#t-7:checked ~ .dots label[for="t-8"],
+#t-8:checked ~ .dots label[for="t-7"],
+#t-8:checked ~ .dots label[for="t-9"],
+#t-9:checked ~ .dots label[for="t-8"],
+#t-9:checked ~ .dots label[for="t-10"],
+#t-10:checked ~ .dots label[for="t-9"]{
   transform: scale(1.5);
 }
 
@@ -69,7 +85,12 @@ body{
 #t-2:checked ~ .testimonials label[for="t-4"],
 #t-3:checked ~ .testimonials label[for="t-5"],
 #t-4:checked ~ .testimonials label[for="t-1"],
-#t-5:checked ~ .testimonials label[for="t-2"]{
+#t-5:checked ~ .testimonials label[for="t-2"],
+#t-6:checked ~ .testimonials label[for="t-8"],
+#t-7:checked ~ .testimonials label[for="t-9"],
+#t-8:checked ~ .testimonials label[for="t-10"],
+#t-9:checked ~ .testimonials label[for="t-6"],
+#t-10:checked ~ .testimonials label[for="t-7"]{
   transform: translate3d(600px, 0, -180px) rotateY(-25deg);
   z-index: 2;
 }
@@ -78,16 +99,26 @@ body{
 #t-2:checked ~ .testimonials label[for="t-3"],
 #t-3:checked ~ .testimonials label[for="t-4"],
 #t-4:checked ~ .testimonials label[for="t-5"],
-#t-5:checked ~ .testimonials label[for="t-1"]{
+#t-5:checked ~ .testimonials label[for="t-6"],
+#t-6:checked ~ .testimonials label[for="t-7"],
+#t-7:checked ~ .testimonials label[for="t-8"],
+#t-8:checked ~ .testimonials label[for="t-9"],
+#t-9:checked ~ .testimonials label[for="t-10"],
+#t-10:checked ~ .testimonials label[for="t-1"] {
   transform: translate3d(300px, 0, -90px) rotateY(-15deg);
-  z-index: 3;
+  z-index: 5;
 }
 
 #t-2:checked ~ .testimonials label[for="t-1"],
 #t-3:checked ~ .testimonials label[for="t-2"],
 #t-4:checked ~ .testimonials label[for="t-3"],
 #t-5:checked ~ .testimonials label[for="t-4"],
-#t-1:checked ~ .testimonials label[for="t-5"]{
+#t-6:checked ~ .testimonials label[for="t-5"],
+#t-7:checked ~ .testimonials label[for="t-6"],
+#t-8:checked ~ .testimonials label[for="t-7"],
+#t-9:checked ~ .testimonials label[for="t-8"],
+#t-10:checked ~ .testimonials label[for="t-9"],
+#t-1:checked ~ .testimonials label[for="t-10"] {
   transform: translate3d(-300px, 0, -90px) rotateY(15deg);
   z-index: 3;
 }
@@ -95,18 +126,25 @@ body{
 #t-3:checked ~ .testimonials label[for="t-1"],
 #t-4:checked ~ .testimonials label[for="t-2"],
 #t-5:checked ~ .testimonials label[for="t-3"],
-#t-2:checked ~ .testimonials label[for="t-5"],
-#t-1:checked ~ .testimonials label[for="t-4"]{
+#t-6:checked ~ .testimonials label[for="t-4"],
+#t-7:checked ~ .testimonials label[for="t-5"],
+#t-8:checked ~ .testimonials label[for="t-6"],
+#t-9:checked ~ .testimonials label[for="t-7"],
+#t-10:checked ~ .testimonials label[for="t-8"],
+#t-1:checked ~ .testimonials label[for="t-9"],
+#t-2:checked ~ .testimonials label[for="t-10"] {
   transform: translate3d(-600px, 0, -180px) rotateY(25deg);
-
 }
 
 #t-1:checked ~ .testimonials label[for="t-1"],
 #t-2:checked ~ .testimonials label[for="t-2"],
 #t-3:checked ~ .testimonials label[for="t-3"],
 #t-4:checked ~ .testimonials label[for="t-4"],
-#t-5:checked ~ .testimonials label[for="t-4"],
-#t-5:checked ~ .testimonials label[for="t-5"]{
-
+#t-5:checked ~ .testimonials label[for="t-5"],
+#t-6:checked ~ .testimonials label[for="t-6"],
+#t-7:checked ~ .testimonials label[for="t-7"],
+#t-8:checked ~ .testimonials label[for="t-8"],
+#t-9:checked ~ .testimonials label[for="t-9"],
+#t-10:checked ~ .testimonials label[for="t-10"] {
   z-index: 4;
 }
