--- a/src/app/Shared/header/header.component.html
+++ b/src/app/Shared/header/header.component.html
@@ -28,38 +28,30 @@
 
 
             <li class="nav-item dropdown">
-
               <a class="nav-link nav-icon-hover" href="javascript:void(0)" id="drop2" data-bs-toggle="dropdown" aria-expanded="false">
-                <i class="ti ti-bell-ringing">
-
-                </i>
-
-                <div class="notification bg-primary rounded-circle">
-
-                </div>
-                <span class="badge rounded-pill bg-danger fs-2">0</span>
-
+                <i class="ti ti-bell-ringing"></i>
+                <div class="notification bg-primary rounded-circle"></div>
+                <span class="badge rounded-pill bg-danger fs-2">{{ totalNotifications }}</span>
               </a>
               <div class="dropdown-menu content-dd dropdown-menu-end dropdown-menu-animate-up" aria-labelledby="drop2">
                 <div class="d-flex align-items-center justify-content-between py-3 px-7">
                   <h5 class="mb-0 fs-5 fw-semibold">Notifications</h5>
-                  <span class="badge bg-primary rounded-4 px-3 py-1 lh-sm">0 new</span>
+                  <span class="badge bg-primary rounded-4 px-3 py-1 lh-sm">{{ newNotifications }} new</span>
                 </div>
-                <div class="message-body" data-simplebar>
-
+                <div class="message-body" data-simplebar *ngFor="let message of messages">
                   <a href="javascript:void(0)" class="py-6 px-7 d-flex align-items-center dropdown-item">
-                          <span class="me-3">
-                            <img src="assets/images/profile/user-1.jpg" alt="user" class="rounded-circle" width="48" height="48" />
-                          </span>
+        <span class="me-3">
+          <img src="assets/images/profile/user-1.jpg" alt="user" class="rounded-circle" width="48" height="48" />
+        </span>
                     <div class="w-75 d-inline-block v-middle">
-                      <h6 class="mb-1 fw-semibold">Roman Joined the Team!</h6>
-                      <span class="d-block">Congratulate him</span>
+                      <h6 class="mb-1 fw-semibold">{{ message }}</h6>
+                      <span class="d-block">{{ getCurrentTime() }}</span>
                     </div>
                   </a>
                 </div>
-
               </div>
             </li>
+
             <li class="nav-item dropdown">
               <a class="nav-link pe-0" href="javascript:void(0)" id="drop1" data-bs-toggle="dropdown" aria-expanded="false">
                 <div class="d-flex align-items-center">
