--- a/src/app/Shared/leftsidebar/leftsidebar.component.html
+++ b/src/app/Shared/leftsidebar/leftsidebar.component.html
@@ -67,7 +67,7 @@
           </a>
         </li>
         <li class="sidebar-item">
-          <a class="sidebar-link"  routerLink="/home"   routerLinkActive="active"   aria-expanded="false">
+          <a class="sidebar-link" [routerLink]="['/listReunion','entreprise',1]" aria-expanded="false">
                   <span>
                     <i class="ti ti-brand-zoom"></i>
                   </span>
@@ -125,7 +125,7 @@
           </a>
         </li>
         <li class="sidebar-item">
-          <a class="sidebar-link" routerLink="/home"   routerLinkActive="active"   aria-expanded="false">
+          <a class="sidebar-link" [routerLink]="['/calendar',username,username1]" aria-expanded="false">
                   <span>
                     <i class="ti ti-calendar-check"></i>
                   </span>
