--- a/src/app/Shared/header/header.component.html
+++ b/src/app/Shared/header/header.component.html
@@ -71,14 +71,14 @@
               <div class="dropdown-menu content-dd dropdown-menu-end dropdown-menu-animate-up" aria-labelledby="drop1">
                 <div class="profile-dropdown position-relative" data-simplebar>
                   <div class="py-3 px-7 pb-0">
-                    <h5 class="mb-0 fs-5 fw-semibold">Profil de l'utilisateur</h5>
+                    <h5 class="mb-0 fs-5 fw-semibold">{{user.userType}}</h5>
                   </div>
                   <div class="d-flex align-items-center py-9 mx-7 border-bottom">
                     <img src="assets/images/profile/user-1.jpg" class="rounded-circle" width="80" height="80" alt="" />
                     <div class="ms-3" >
-                      <h5 class="mb-1 fs-3" >Foulen Ben FOULEN</h5>
+                      <h5 class="mb-1 fs-3" >{{user.fname}} {{user.lname}}</h5>
                       <p class="mb-0 d-flex text-dark align-items-center gap-2">
-                        <i class="ti ti-mail fs-4" ></i> Foulen.benfoulen@company.com
+                        <i class="ti ti-mail fs-4" ></i> {{user.emailAddress}}
                       </p>
                     </div>
                   </div>
