--- a/src/app/ReunionB2B/listreunion/listreunion.component.html
+++ b/src/app/ReunionB2B/listreunion/listreunion.component.html
@@ -184,7 +184,10 @@ a.status-grey {
 
     <div  class="px-4 py-3 border-bottom align-items-center">
       <h5 class="card-title fw-semibold mb-0 lh-sm">Liste Des Reunions</h5>
-
+      <div class="position-relative w-100">
+        <input [(ngModel)]="searchtext" type="text" class="form-control-sm search-chat py-2 ps-5" id="text-srh" placeholder="Search">
+        <i class="ti ti-search position-absolute top-50 start-0 translate-middle-y fs-6 text-dark ms-3"></i>
+      </div>
     </div>
     <div class="card-body p-4">
       <div class="table-responsive rounded-2 mb-4">
@@ -200,7 +203,7 @@ a.status-grey {
           </tr>
           </thead>
           <tbody>
-          <tr *ngFor="let i of table | paginate: { itemsPerPage: itemsPerPage, currentPage: currentPage }">
+          <tr *ngFor="let i of table|searchfilter:searchtext | paginate: { itemsPerPage: itemsPerPage, currentPage: currentPage }">
             <td *ngIf="username1=='partner'">{{username}}</td>
             <td><p class="mb-0 fw-normal fs-4">{{i.idEntreprise}}</p></td>
             <td><p class="mb-0 fw-normal fs-4">{{i.dateTime}}</p></td>
