--- a/src/app/entreprise-details/entreprise-details.component.html
+++ b/src/app/entreprise-details/entreprise-details.component.html
@@ -43,7 +43,7 @@
                     <div class="text-center">
                       <h5 class="card-title fw-semibold">Entreprise</h5>
                       <img src="../../assets/images/profile/user-1.jpg" alt="" class="img-fluid rounded-circle" width="120" height="120">
-                      <p class="mb-0"><strong>bfi</strong></p>
+                      <p class="mb-0"><strong><!--{{legalName}}--></strong></p>
                     </div>
                   </div>
                 </div>
@@ -125,7 +125,7 @@
                         </div>
                         <div>
                           <p class="mb-0">Current Plan</p>
-                          <h5 class="fs-4 fw-semibold">7.500.000 $ per year</h5>
+                          <h5 class="fs-4 fw-semibold">{{currentObjectif}} $ per year</h5>
                         </div>
                       </div>
                     </div>
