--- a/src/app/chat-module/chat-module.component.html
+++ b/src/app/chat-module/chat-module.component.html
@@ -41,7 +41,7 @@
                         </span>
               </div>
               <div class="ms-3">
-                <h6 class="fw-semibold mb-2">{{currentusernom}}</h6>
+                <h6 class="fw-semibold mb-2">{{currentuserlnom}} {{currentuserfnom}}</h6>
                 <p class="mb-0 fs-2">{{currentuserrole}}</p>
               </div>
             </div>
@@ -122,7 +122,7 @@
                 </div>
                 <div class="">
                   <h6 class="mb-1 name fw-semibold"></h6>
-                  <p class="mb-0">{{currentStaticUsername}}</p>
+                  <p class="mb-0">{{currentuserfnom}}</p>
                 </div>
               </div>
               <ul class="list-unstyled mb-0 d-flex align-items-center">
